[package]
name = "normandy-hook-fixed-term"
version = "0.1.0"
description = "Normandy hook program — fixed-term credit check and term enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "normandy_hook_fixed_term"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
